[tool.poetry]
name = "mass_mentioner"
version = "0.1.0"
description = ""
authors = ["Amndeep Singh Mann <me@asm.works>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.17.0"
asyncpraw = "^7.2.0"
PyYAML = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
