[tool.poetry]
name = "mass_mentioner"
version = "0.2.0"
description = ""
authors = ["Amndeep Singh Mann <me@asm.works>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
asyncpraw = "^7.7.1"
PyYAML = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
