[tool.poetry]
name = "mass_mentioner"
version = "0.3.0"
description = ""
authors = ["Amndeep Singh Mann <me@asm.works>"]

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
asyncpraw = "^7.8.1"
PyYAML = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
